# python-project-template

./: .gitignore  pyproject.toml
python_project_template/: __init__.py  __main__.py  initialize.py  utils.py
