[tool.poetry]
name = "python-project-template"
version = "0.4.0"
description = ""
authors = ["Stig-Martin Liavåg <stigmartin94@gmail.com>"]
readme = "README.md"
packages = [
    { include="python_project_template" },
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
black = "^23.1.0"
ruff = "^0.0.243"

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
initialize_python_project = "python_project_template.__main__:main"
